--- a/templates/kustomization.yaml
+++ b/templates/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: $CIRCLE_BRANCH
   namespace: flux-system
 spec:
   interval: 10m0s
