--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,8 @@ jobs:
             git config --global user.email "dendov555@gmail.com"
             git config --global user.name "denis-dovgodko"
             git add kubernetes/*
-            git commit -am "[circle skip] Autogenerate"
-            git push -q https://${GITHUB_TOKEN}@github.com/denis-dovgodko/webserver-ec2-module-terraform main
+            git commit -am "[ci skip] Autogenerate"
+            git push https://${GITHUB_TOKEN}@github.com/denis-dovgodko/webserver-ec2-module-terraform main > /dev/null 2>&1
 workflows:
   analyze-tf-code:
     jobs:
