--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,8 @@ jobs:
             git config --global user.email "dendov555@gmail.com"
             git config --global user.name "denis-dovgodko"
             git add kubernetes/*
-            git commit -am "[ci skip] Autogenerate"
-            git push https://${GITHUB_TOKEN}@github.com/denis-dovgodko/webserver-ec2-module-terraform main || true
+            git commit --allow-empty -am "[ci skip] Autogenerate"
+            git push https://${GITHUB_TOKEN}@github.com/denis-dovgodko/webserver-ec2-module-terraform main
 workflows:
   analyze-tf-code:
     jobs:
