--- a/kubernetes/fluxcd/repositories/infra-repo/clusters/dev-cluster/flux-system/kustomization.yaml
+++ b/kubernetes/fluxcd/repositories/infra-repo/clusters/dev-cluster/flux-system/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
-- ../production.yaml - ../test.yaml
+- ../production.yaml
+- ../test.yaml
