--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run:
           name: Preinstall
           command: |
-            sudo apt-get install -y gettext-base gh
+            sudo apt-get install -y gh
       - checkout
       - run:
           name: Generate Output File
