--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,7 @@ jobs:
       - run:
           name: Preinstall
           command: | 
+            go mod init main || touch main.go
             go get github.com/a8m/envsubst/cmd/envsubst
             sudo apt-get install -y snap
             sudo snap install gh
