--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           command: | 
             go mod init main || touch main.go
             go get github.com/a8m/envsubst/cmd/envsubst
-            sudo apt-get install -y snap
+            sudo apt-get install -y snapd
             sudo snap install gh
       - run:
           name: Generate Output File
