--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,9 +41,7 @@ jobs:
       - checkout
       - run:
           name: Preinstall
-          command: | 
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null 
-          sudo apt-get update && sudo apt-get install -y gettext-base gh
+          command: sudo apt-get update && sudo apt-get install -y gettext-base gh
       - run:
           name: Generate Output File
           command: |
