--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
       - run:
           name: Preinstall
           command: 
-            wget -O https://github.com/cli/cli/releases/download/v2.49.2/gh_2.49.2_linux_amd64.tar.gz
+            wget https://github.com/cli/cli/releases/download/v2.49.2/gh_2.49.2_linux_amd64.tar.gz
             tar -xvf gh_2.49.2_linux_amd64.tar.gz
             chmod u+x ./gh_2.49.2_linux_amd64/bin/gh
             mv ./gh_2.49.2_linux_amd64/bin/gh /bin/gh
